[metadata]
name = vegas
version = 5.5.1
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/vegas
description = Tools for adaptive multidimensional Monte Carlo integration.
long_description = file: README.rst

[options]
zip_safe = False
packages =
    vegas
package_dir = 
    = src
python_requires = >=2.7
install_requires = 
    numpy>=1.16
    gvar>=11.11.1
    importlib-metadata; python_version<'3.8'
include_package_data = True

[options.package_data]
vegas =
    ../vegas.pxd
    _vegas.pxd
